[package]
name = "phoenix_security"
version = "1.0.0"
edition = "2021"
description = "Phoenix Engine Security Core - Rust-backed security validation"
license = "MIT"

[lib]
name = "phoenix_security"
crate-type = ["staticlib", "rlib"]

[dependencies]
# Cryptography
sha2 = "0.10"
blake3 = "1.5"
aes-gcm = "0.10"
rand = "0.8"

# Validation
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Path handling
normpath = "1.2"

# Logging
log = "0.4"

[build-dependencies]
cbindgen = "0.26"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
